--- a/src/fujin/templates/default.timer.j2
+++ b/src/fujin/templates/default.timer.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Timer for {{ app_name }} {{ process_name }}
+Description=Timer for {{ process_name }}
 
 [Timer]
 OnCalendar={{ process.timer }}
